k8s/deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ice-rivals
  namespace: ice-rivals
spec:
  replicas: 1
  selector:
    matchLabels:
      app: ice-rivals
  template:
    metadata:
      labels:
        app: ice-rivals
    spec:
      containers:
        - name: ice-rivals
          image: ice-rivals:latest
          imagePullPolicy: Never
          ports:
            - containerPort: 3001
