k8s/service.yml
apiVersion: v1
kind: Service
metadata:
  name: ice-rivals
  namespace: ice-rivals
spec:
  selector:
    app: ice-rivals
  ports:
    - port: 3001
      targetPort: 3001
