k8s/ingress-catchall.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ice-rivals-catchall
  namespace: ice-rivals
  annotations:
    traefik.ingress.kubernetes.io/router.entrypoints: websecure
spec:
  ingressClassName: traefik
  rules:
    - http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: ice-rivals
                port:
                  number: 3001
