k8s/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ice-rivals-ingress
  namespace: ice-rivals
  annotations:
    traefik.ingress.kubernetes.io/router.entrypoints: web,websecure
    traefik.ingress.kubernetes.io/router.tls: "true"
    traefik.ingress.kubernetes.io/router.tls.certresolver: letsencrypt
spec:
  ingressClassName: traefik
  rules:
    - host: api.icerivals.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: ice-rivals
                port:
                  number: 3001
  tls:
    - hosts:
        - api.icerivals.com
      secretName: ice-rivals-tls
